thirdparty/glad/gles2/gles2.v


fn C.glad_glUniformMatrix3fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat)

pub fn uniformmatrix3fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat) {
	C.glad_glUniformMatrix3fv(location, count, transpose, value)
}

fn C.glad_glUniformMatrix4fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat)

pub fn uniformmatrix4fv(location GLint, count GLsizei, transpose GLboolean, value &GLfloat) {
	C.glad_glUniformMatrix4fv(location, count, transpose, value)
}

fn C.glad_glUseProgram(program GLuint)

pub fn use_program(program GLuint) {
	C.glad_glUseProgram(program)
}

fn C.glad_glValidateProgram(program GLuint)

pub fn validate_program(program GLuint) {
	C.glad_glValidateProgram(program)
}

fn C.glad_glVertexAttrib1f(index GLuint, x GLfloat)

pub fn vertex_attrib1f(index GLuint, x GLfloat) {
	C.glad_glVertexAttrib1f(index, x)
}

fn C.glad_glVertexAttrib1fv(index GLuint, v &GLfloat)

pub fn vertex_attrib1fv(index GLuint, v &GLfloat) {
	C.glad_glVertexAttrib1fv(index, v)
}

fn C.glad_glVertexAttrib2f(index GLuint, x GLfloat, y GLfloat)

pub fn vertex_attrib2f(index GLuint, x GLfloat, y GLfloat) {
	C.glad_glVertexAttrib2f(index, x, y)
}

fn C.glad_glVertexAttrib2fv(index GLuint, v &GLfloat)

pub fn vertex_attrib2fv(index GLuint, v &GLfloat) {
	C.glad_glVertexAttrib2fv(index, v)
}

fn C.glad_glVertexAttrib3f(index GLuint, x GLfloat, y GLfloat, z GLfloat)

pub fn vertex_attrib3f(index GLuint, x GLfloat, y GLfloat, z GLfloat) {
	C.glad_glVertexAttrib3f(index, x, y, z)
}

fn C.glad_glVertexAttrib3fv(index GLuint, v &GLfloat)

pub fn vertex_attrib3fv(index GLuint, v &GLfloat) {
	C.glad_glVertexAttrib3fv(index, v)
}

fn C.glad_glVertexAttrib4f(index GLuint, x GLfloat, y GLfloat, z GLfloat, w GLfloat)

pub fn vertex_attrib4f(index GLuint, x GLfloat, y GLfloat, z GLfloat, w GLfloat) {
	C.glad_glVertexAttrib4f(index, x, y, z, w)
}

fn C.glad_glVertexAttrib4fv(index GLuint, v &GLfloat)

pub fn vertex_attrib4fv(index GLuint, v &GLfloat) {
	C.glad_glVertexAttrib4fv(index, v)
}

fn C.glad_glVertexAttribPointer(index GLuint, size GLint, type_ ESFlag, normalized GLboolean, stride GLsizei, pointer voidptr)

pub fn vertex_attrib_pointer(index GLuint, size GLint, type_ ESFlag, normalized GLboolean, stride GLsizei, pointer voidptr) {
	C.glad_glVertexAttribPointer(index, size, type_, normalized, stride, pointer)
}

fn C.glad_glViewport(x GLint, y GLint, width GLsizei, height GLsizei)

pub fn viewport(x GLint, y GLint, width GLsizei, height GLsizei) {
	C.glad_glViewport(x, y, width, height)
}

fn C.gladLoadGLES2UserPtr(load GLADuserptrloadfunc, userptr voidptr) int

pub fn load_gles2_userptr(load GLADuserptrloadfunc, userptr voidptr) int {
	return C.gladLoadGLES2UserPtr(load, userptr)
}

fn C.gladLoadGLES2(load GLADloadfunc) int

pub fn load_gles2(load GLADloadfunc) int {
	return C.gladLoadGLES2(load)
}
